updated Portuguese (Brazil) and Russian translation

--- a/po/wesnoth-help/ru.po
+++ b/po/wesnoth-help/ru.po
@@ -175,7 +175,9 @@ msgid ""
 msgstr ""
 "Один из вариантов форм дрейков: может быть как <ref>dst='unit_Drake Clasher' "
 "text='Боец дрейков'</ref> или <ref>dst='unit_Drake Fighter' text='Солдат "
-"дрейков'</ref>."
+"дрейков'</ref>.Один из вариантов форм дрейков: может быть как "
+"<ref>dst='unit_Drake Clasher' text='Боец дрейков'</ref> или "
+"<ref>dst='unit_Drake Fighter' text='Солдат дрейков'</ref>."
 
 #. [topic]: id=aerie
 #: data/core/encyclopedia/drakes.cfg:13
@@ -242,6 +244,8 @@ msgid ""
 msgstr ""
 "Новый континент— великий континент к востоку от <ref>dst='morogor' "
 "text='Морогора'</ref>. О его существовании не знали дрейки вплоть до битвы "
+"за Галун.Новый континент— великий континент к востоку от <ref>dst='morogor' "
+"text='Морогора'</ref>. О его существовании не знали дрейки вплоть до битвы "
 "за Галун."
 
 #. [topic]: id=abyss
@@ -256,7 +260,8 @@ msgid ""
 "falls off the world-disc."
 msgstr ""
 "В учении о Дрейках описывался как огромный и смертельный водопад стекающий с "
-"земного диска."
+"земного диска.В учении о Дрейках описывался как огромный и смертельный "
+"водопад стекающий с земного диска."
 
 #. [topic]: id=spiral_path
 #: data/core/encyclopedia/drakes.cfg:49
@@ -272,7 +277,9 @@ msgid ""
 msgstr ""
 "Квази-секретная организация среди дрейков посвятивщих себя предотвращению "
 "последней войны за Малтусиан. См. также <ref>dst='straight_path' "
-"text='Прямой путь'</ref>"
+"text='Прямой путь'</ref>Квази-секретная организация среди дрейков "
+"посвятивщих себя предотвращению последней войны за Малтусиан. См. также "
+"<ref>dst='straight_path' text='Прямой путь'</ref>"
 
 #. [topic]: id=straight_path
 #: data/core/encyclopedia/drakes.cfg:55
@@ -287,7 +294,9 @@ msgid ""
 "ref>."
 msgstr ""
 "Вечная традиция дрейков расширения и захвата. Так обычно говорят члены "
-"<ref>dst='spiral_path' text='Спирального пути'</ref>."
+"<ref>dst='spiral_path' text='Спирального пути'</ref>.Вечная традиция дрейков "
+"расширения и захвата. Так обычно говорят члены <ref>dst='spiral_path' "
+"text='Спирального пути'</ref>."
 
 #. [topic]: id=dominant
 #: data/core/encyclopedia/drakes.cfg:61
@@ -1252,7 +1261,8 @@ msgid ""
 " red if it can no longer move or attack, or the user ended the unit’s turn."
 msgstr ""
 " красный, если отряд не может передвигатся или атаковать. Или игрок завершил "
-"ход для отряда."
+"ход для отряда. красный, если отряд не может передвигатся или атаковать. Или "
+"игрок завершил ход для отряда."
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:183
