--- a/po/wesnoth-manual/ru.po
+++ b/po/wesnoth-manual/ru.po
@@ -265,8 +265,9 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/main-menu-1.9.7.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/ru/main-menu-1.9.7.jpg"
-"\"/> </imageobject>"
+"imageobject><imageobject> <imagedata fileref=\"images/main-menu-1.9.7.jpg\"/"
+"> </imageobject><imageobject> <imagedata fileref=\"images/ru/main-menu-1.9.7."
+"jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:93
@@ -686,8 +687,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/multiplayer-1.9.7.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/ru/multiplayer-1.9.7."
-"jpg\"/> </imageobject>"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:329
@@ -864,8 +864,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/game-screen-1.9.7.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/ru/game-screen-1.9.7."
-"jpg\"/> </imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><title>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
@@ -896,8 +895,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/top_pane-1.9.7.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/ru/top_pane-1.9.7.jpg"
-"\"/> </imageobject>"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:405
@@ -990,8 +988,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/right_pane-1.9.7.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/ru/right_pane-1.9.7.jpg"
-"\"/> </imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
@@ -2134,8 +2131,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/recruit-1.9.7.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/ru/recruit-1.9.7.jpg\"/"
-"> </imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
@@ -2388,8 +2384,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/schedule-dawn.png\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/schedule-dawn.png\"/> "
-"</imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -2428,8 +2423,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/schedule-morning.png\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/schedule-morning.png\"/"
-"> </imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -2483,8 +2477,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/schedule-afternoon.png\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/schedule-afternoon.png"
-"\"/> </imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -2514,8 +2507,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/schedule-dusk.png\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/schedule-dusk.png\"/> "
-"</imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -2543,8 +2535,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/schedule-firstwatch.png\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/schedule-firstwatch.png"
-"\"/> </imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -2573,8 +2564,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/schedule-secondwatch.png\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/schedule-secondwatch."
-"png\"/> </imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -2601,8 +2591,7 @@ msgid ""
 "imageobject>"
 msgstr ""
 "<imageobject> <imagedata fileref=\"images/schedule-underground.png\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/schedule-underground."
-"png\"/> </imageobject>"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -3656,9 +3645,7 @@ msgstr "Зелёный"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-green.jpg\"/> </imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/orb-green.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/orb-green.jpg\"/> </"
-"imageobject>"
+"<imageobject> <imagedata fileref=\"images/orb-green.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:2297
@@ -3682,9 +3669,7 @@ msgstr "Жёлтый"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-yellow.jpg\"/> </imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/orb-yellow.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/orb-yellow.jpg\"/> </"
-"imageobject>"
+"<imageobject> <imagedata fileref=\"images/orb-yellow.jpg\"/> </imageobject>"
 
 # type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -3713,9 +3698,7 @@ msgstr "Красный"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-red.jpg\"/> </imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/orb-red.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/orb-red.jpg\"/> </"
-"imageobject>"
+"<imageobject> <imagedata fileref=\"images/orb-red.jpg\"/> </imageobject>"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -3744,9 +3727,7 @@ msgstr "Синий"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-blue.jpg\"/> </imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/orb-blue.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/orb-blue.jpg\"/> </"
-"imageobject>"
+"<imageobject> <imagedata fileref=\"images/orb-blue.jpg\"/> </imageobject>"
 
 # type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
@@ -3765,9 +3746,7 @@ msgstr "Если отряд принадлежит вашим союзникам
 msgid ""
 "<imageobject> <imagedata fileref=\"images/orb-none.jpg\"/> </imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/orb-none.jpg\"/> </"
-"imageobject><imageobject> <imagedata fileref=\"images/orb-none.jpg\"/> </"
-"imageobject>"
+"<imageobject> <imagedata fileref=\"images/orb-none.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth/doc/manual/manual.en.xml:2361
