--- a/po/wesnoth-multiplayer/ru.po
+++ b/po/wesnoth-multiplayer/ru.po
@@ -1904,7 +1904,8 @@ msgid ""
 "volcanic eruption. It has 36 villages."
 msgstr ""
 "Битва 3x3 за прах великого древнего королевства, давным-давно павшего от "
-"извержения вулкана. 36 деревень."
+"извержения вулкана. 36 деревень.Битва 3x3 за прах великого древнего "
+"королевства, давным-давно павшего от извержения вулкана. 36 деревень."
 
 #. [multiplayer]: id=multiplayer_Waterloo_Sunset
 #: data/multiplayer/scenarios/6p_Waterloo_Sunset.cfg:7
