--- a/po/wesnoth-sotbe/ru.po
+++ b/po/wesnoth-sotbe/ru.po
@@ -2807,7 +2807,10 @@ msgstr ""
 "крепости есть свои слабости. Стены Престима крепкие но очень длинные и их "
 "сложно зашищать с разных сторон сразу. Граф Ланбек'х должно быть знает что "
 "они не могут пробиться только перейдя реку, где стоял мост. Так что нам "
-"лучше продумать то."
+"лучше продумать то.Я так не уверен. У каждой крепости есть свои слабости. "
+"Стены Престима крепкие но очень длинные и их сложно зашищать с разных сторон "
+"сразу. Граф Ланбек'х должно быть знает что они не могут пробиться только "
+"перейдя реку, где стоял мост. Так что нам лучше продумать то."
 
 #. [message]: role=cannonfodder
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:260
@@ -2837,7 +2840,10 @@ msgstr ""
 "когда прибудут шаматы с Великой Ордой. Мы не можем позволить людям разбить "
 "плацдарм на этой стороне реки.Глупец! Мы можем столько продержаться. Но нам "
 "нужно стойко держать Престим когда прибудут шаматы с Великой Ордой. Мы не "
-"можем позволить людям разбить плацдарм на этой стороне реки."
+"можем позволить людям разбить плацдарм на этой стороне реки.Глупец! Мы можем "
+"столько продержаться. Но нам нужно стойко держать Престим когда прибудут "
+"шаматы с Великой Ордой. Мы не можем позволить людям разбить плацдарм на этой "
+"стороне реки."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:285
@@ -2853,7 +2859,10 @@ msgstr ""
 "нашу оборону.Потому что если мы не сможем решительно победить этих людей, "
 "другие племена решат, что мы недостаточно сильны, чтобы возглавлять их. "
 "Каждый водь попытается провозгласить себя лидером орды и люди смогут "
-"прорваться через нашу оборону."
+"прорваться через нашу оборону.Потому что если мы не сможем решительно "
+"победить этих людей, другие племена решат, что мы недостаточно сильны, чтобы "
+"возглавлять их. Каждый водь попытается провозгласить себя лидером орды и "
+"люди смогут прорваться через нашу оборону."
 
 #. [message]: role=cannonfodder
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:290
@@ -2902,6 +2911,7 @@ msgid ""
 msgstr ""
 "Великая Орда почти здесь! Вытесните их из наших деревень <b>сейчас</b>!"
 "Великая Орда почти здесь! Вытесните их из наших деревень <b>сейчас</b>!"
+"Великая Орда почти здесь! Вытесните их из наших деревень <b>сейчас</b>!"
 
 #. [message]: speaker=Gork
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1130
@@ -2916,7 +2926,8 @@ msgid ""
 msgstr ""
 "Что это? Слабак позволил людям войти в Престиме? Я поведу орду и вытолкну их "
 "к реке!Что это? Слабак позволил людям войти в Престиме? Я поведу орду и "
-"вытолкну их к реке!"
+"вытолкну их к реке!Что это? Слабак позволил людям войти в Престиме? Я поведу "
+"орду и вытолкну их к реке!"
 
 #. [message]: role=greathordewarlord2
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1141
@@ -2926,7 +2937,8 @@ msgid ""
 msgstr ""
 "Фу! Я единтвенный кто достаточно силён чтобы выгнать этих людей! Великая "
 "Орда следует за мной!Фу! Я единтвенный кто достаточно силён чтобы выгнать "
-"этих людей! Великая Орда следует за мной!"
+"этих людей! Великая Орда следует за мной!Фу! Я единтвенный кто достаточно "
+"силён чтобы выгнать этих людей! Великая Орда следует за мной!"
 
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1147
@@ -2936,7 +2948,8 @@ msgid ""
 msgstr ""
 "Посмотрите на это, глупые орки стали сжражаться между собой! Это наш шанс, "
 "все в атаку!Посмотрите на это, глупые орки стали сжражаться между собой! Это "
-"наш шанс, все в атаку!"
+"наш шанс, все в атаку!Посмотрите на это, глупые орки стали сжражаться между "
+"собой! Это наш шанс, все в атаку!"
 
 #. [message]: speaker=Gork
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:1158
@@ -3875,6 +3888,8 @@ msgstr ""
 "Я не могу оставить этих отступников без присмотра позади нас. Мне нужно о "
 "них позаботится прежде чем продолжить.Я не могу оставить этих отступников "
 "без присмотра позади нас. Мне нужно о них позаботится прежде чем продолжить."
+"Я не могу оставить этих отступников без присмотра позади нас. Мне нужно о "
+"них позаботится прежде чем продолжить."
 
 #. [scenario]: id=16_The_Coward
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:4
@@ -4505,7 +4520,8 @@ msgid "I’m sorry, Kapou’e. I’ll have my men leave what remains of him to y
 msgstr ""
 "Мои соболезнования, Капу'е. Я прикажу своим людям отдать тебе то, что он "
 "него осталось.Мои соболезнования, Капу'е. Я прикажу своим людям отдать тебе "
-"то, что он него осталось."
+"то, что он него осталось.Мои соболезнования, Капу'е. Я прикажу своим людям "
+"отдать тебе то, что он него осталось."
 
 #. [message]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/18_Northern_Alliance.cfg:681
