--- a/po/wesnoth-trow/ru.po
+++ b/po/wesnoth-trow/ru.po
@@ -6025,7 +6025,9 @@ msgid ""
 msgstr ""
 "Бростаться огнём это самая малая из способностей Рубина. Вы дважды глупцы, "
 "что не дошли до более чем самое тривиальное его применение и за то что "
-"отдали его."
+"отдали его.Бростаться огнём это самая малая из способностей Рубина. Вы "
+"дважды глупцы, что не дошли до более чем самое тривиальное его применение и "
+"за то что отдали его."
 
 #. [message]: speaker=Burin the Lost
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg:341
