--- a/po/wesnoth-tutorial/ru.po
+++ b/po/wesnoth-tutorial/ru.po
@@ -75,7 +75,7 @@ msgstr "Уничтожьте свирепого врага"
 #. [objective]: condition=lose
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:159
 msgid "Get yourself killed"
-msgstr "Позволить себя убить"
+msgstr "Если дадите себя убить"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:179
@@ -105,7 +105,7 @@ msgid ""
 "You are standing in the keep, and your mentor Delfador is on the east side "
 "of the river."
 msgstr ""
-"В этом ввдедении Вы играете за Конрада.\n"
+"В этом введении Вы играете за Конрада.\n"
 "Вы находитесь в цитадели, а Ваш наставник Делфадор — на восточном берегу "
 "реки."
 
@@ -116,7 +116,7 @@ msgid ""
 "You are standing in the keep, and your mentor Delfador is on the east side "
 "of the river."
 msgstr ""
-"В этом ввдедении Вы играете за Лисар.\n"
+"В этом введении Вы играете за Лисар.\n"
 "Вы находитесь в цитадели, а Ваш наставник Делфадор — на восточном берегу "
 "реки."
 
@@ -383,8 +383,8 @@ msgid ""
 "There is a village on the other side of the river. Visiting villages is a "
 "good idea, and ending your turn in one will heal you. To the village!"
 msgstr ""
-"На другой стороне реки есть деревня. Хорошо бы посетить её и завершить свой "
-"ход в ней, чтобы излечиться. Тебе следует отступить туда."
+"На другой стороне реки есть деревня. Хорошо бы её посетить, и завершить в "
+"ней свой ход, чтобы излечиться. Тебе следует отступить туда."
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:535
@@ -392,8 +392,8 @@ msgid ""
 "female^There is a village on the other side of the river. Visiting villages "
 "is a good idea, and ending your turn in one will heal you. To the village!"
 msgstr ""
-"На другой стороне реки есть деревня. Хорошо бы посетить её и завершить свой "
-"ход в ней, чтобы излечиться. Тебе следует отступить туда."
+"На другой стороне реки есть деревня. Хорошо бы её посетить, и завершить в "
+"ней свой ход, чтобы излечиться. Тебе следует отступить туда."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:548
@@ -481,18 +481,18 @@ msgid ""
 "female^A splendid idea. You can recruit two units if you return to the keep. "
 "You have plenty of gold for that."
 msgstr ""
-"Великолепная мысль! Вернись в свой лагерь, и ты сможешь нанять двух солдат. "
-"Золота тебе хватит."
+"Великолепная мысль! Вернись в цитадель своего лагеря, и ты сможешь нанять "
+"двух солдат. Золота тебе хватит."
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:638
 msgid "Move Konrad to the keep"
-msgstr "Приведите Конрада в лагерь"
+msgstr "Приведите Конрада в цитадель"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:639
 msgid "Move Li’sar to the keep"
-msgstr "Приведите Лисар в лагерь"
+msgstr "Приведите Лисар в цитадель"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:656
@@ -532,8 +532,8 @@ msgid ""
 "After this dialog, you can move the mouse over a unit to see a summary of "
 "its abilities on the right of the screen."
 msgstr ""
-"Бойцы, которых вы только что завербовали, на этом ходу ничего сделать не "
-"смогут; вы сможете управлять ими на следующем ходу.\n"
+"Бойцы, которых Вы только что завербовали, на этом ходу ничего сделать не "
+"смогут; Вы сможете управлять ими на следующем ходу.\n"
 "Закрыв этот диалог, вы можете навести мышь на бойца и увидеть его описание "
 "на панели справа."
 
@@ -844,7 +844,7 @@ msgid ""
 msgstr ""
 "После сообщения о победе карта будет затемнена, это обозначает, что сценарий "
 "завершён. Вы, однако, сможете изучить конечное расположение и состояние "
-"ваших войск. Это называется <i>режим остановки</i>. Затем нажмите <b>Конец "
+"Ваших войск. Это называется <i>режим остановки</i>. Затем нажмите <b>Конец "
 "сценария</b>, чтобы перейти к следующему."
 
 #. [message]: speaker=narrator
@@ -1070,7 +1070,7 @@ msgid ""
 "the east; but we could stand on the shore and force them to fight us from "
 "the water, where they are exposed and we are protected by the forest."
 msgstr ""
-"Видишь эту тёмно-синюю воду? Она слишком глубокая — ни мы, ни они не сможем "
+"Видишь эту тёмно-синюю воду? Она слишком глубока — ни мы, ни они не сможем "
 "по ней пройти. Они могут медленно идти по узкой полоске мелководья на "
 "востоке (светло-синяя вода); но мы можем занять побережье и заставить их "
 "биться в воде — так что они будут уязвимы, мы же — под защитой леса."
