--- a/po/wesnoth-units/ru.po
+++ b/po/wesnoth-units/ru.po
@@ -917,6 +917,10 @@ msgstr ""
 "сверхъестественным талантом — Рунный мастер. Его удары так же сильны, как "
 "удары лучших воинов, но страшнее всего — его мастерство, делающее его почти "
 "неуязвимым; ведь руны сдерживают значительную часть ударов его протвиника."
+"Высший ранг, которого может достичь творец рун, не обладающий "
+"сверхъестественным талантом — Рунный мастер. Его удары так же сильны, как "
+"удары лучших воинов, но страшнее всего — его мастерство, делающее его почти "
+"неуязвимым; ведь руны сдерживают значительную часть ударов его протвиника."
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:4
@@ -948,7 +952,10 @@ msgstr ""
 "Рунные кузнецы гномов, искушённые в своём ремесле, чеканят магические руны "
 "на своих доспехаха и оружии. Руны придают ударам рунного кузнеца силу и "
 "точность, и путают удары его врагов, заставляя тех бить слабо, медленно и "
-"попадать в защищённые места доспеха."
+"попадать в защищённые места доспеха.Рунные кузнецы гномов, искушённые в "
+"своём ремесле, чеканят магические руны на своих доспехаха и оружии. Руны "
+"придают ударам рунного кузнеца силу и точность, и путают удары его врагов, "
+"заставляя тех бить слабо, медленно и попадать в защищённые места доспеха."
 
 #. [unit_type]: id=Dwarvish Scout, race=dwarf
 #: data/core/units/dwarves/Scout.cfg:4
@@ -4965,6 +4972,21 @@ msgstr ""
 "мяса. Они хватают жертву своей невероятной пастью, стараюсь содрать плоть "
 "прямо с живых врагов. Убив врага, они пожирают остатки тела, набираясь при "
 "этом сил. Вурдалак — это создание, пришедшее из худших кошмаров людей. В "
+"отличие от младших родственников, упырей и некрофагов, Вурдалаки не "
+"настолько терпеливы, чтобы ждать, пока жертва умрёт от яда, чтобы добраться "
+"до её мяса. Они хватают жертву своей невероятной пастью, стараюсь содрать "
+"плоть прямо с живых врагов. Убив врага, они пожирают остатки тела, набираясь "
+"при этом сил. Вурдалак — это создание, пришедшее из худших кошмаров людей. В "
+"отличие от младших родственников, упырей и некрофагов, Вурдалаки не "
+"настолько терпеливы, чтобы ждать, пока жертва умрёт от яда, чтобы добраться "
+"до её мяса. Они хватают жертву своей невероятной пастью, стараюсь содрать "
+"плоть прямо с живых врагов. Убив врага, они пожирают остатки тела, набираясь "
+"при этом сил.Вурдалак — это создание, пришедшее из худших кошмаров людей. В "
+"отличие от младших родственников, упырей и некрофагов, Вурдалаки не "
+"настолько терпеливы, чтобы ждать, пока жертва умрёт от яда, чтобы добраться "
+"до её мяса. Они хватают жертву своей невероятной пастью, стараюсь содрать "
+"плоть прямо с живых врагов. Убив врага, они пожирают остатки тела, набираясь "
+"при этом сил. Вурдалак — это создание, пришедшее из худших кошмаров людей. В "
 "отличие от младших родственников, упырей и некрофагов, Вурдалаки не "
 "настолько терпеливы, чтобы ждать, пока жертва умрёт от яда, чтобы добраться "
 "до её мяса. Они хватают жертву своей невероятной пастью, стараюсь содрать "
