--- a/po/wesnoth-manpages/ru.po
+++ b/po/wesnoth-manpages/ru.po
@@ -537,6 +537,8 @@ msgid ""
 "in preferences. Example: B<--server server.wesnoth.org>"
 msgstr ""
 "поключится к указаному хосту если таковые имеются, иначе поключится к "
+"первому, указанному в настройках. Например: B<--server server.wesnoth."
+"org>поключится к указаному хосту если таковые имеются, иначе поключится к "
 "первому, указанному в настройках. Например: B<--server server.wesnoth.org>"
 
 #. type: TP
@@ -648,7 +650,8 @@ msgid ""
 "selects a configuration file to load for the AI controller for this side."
 msgstr ""
 "выбрать файл конфигурации из которого загрузить AI контроллер для данной "
-"стороны."
+"стороны.выбрать файл конфигурации из которого загрузить AI контроллер для "
+"данной стороны."
 
 # type: TP
 #. type: TP
@@ -1147,6 +1150,9 @@ msgid ""
 msgstr ""
 "Если установлено в B<no> (по умолчанию), shut_down и restart запросы будут "
 "проигнорированы, только если они не пришли из fifo. Установите в B<yes> "
+"чтобы разрешить удалённое выключение через /query администратором.Если "
+"установлено в B<no> (по умолчанию), shut_down и restart запросы будут "
+"проигнорированы, только если они не пришли из fifo. Установите в B<yes> "
 "чтобы разрешить удалённое выключение через /query администратором."
 
 # type: TP
@@ -1301,6 +1307,10 @@ msgstr ""
 "B<everyone>, B<registered>, B<admin> и B<nobody>, они дают дают разрешение "
 "соответственно всем, зарегистрированным пользователям, администраторам или "
 "запрещает создание новых комнат. Стандартное значение B<everyone>."
+"Определяет, кто может создавать новые комнаты на сервере. Доступные значения "
+"B<everyone>, B<registered>, B<admin> и B<nobody>, они дают дают разрешение "
+"соответственно всем, зарегистрированным пользователям, администраторам или "
+"запрещает создание новых комнат. Стандартное значение B<everyone>."
 
 # type: TP
 #. type: TP
@@ -1331,6 +1341,8 @@ msgid ""
 "trailing /!) Defaults to `' which means the directory wesnothd was started "
 "in."
 msgstr ""
+"Директория, где сервер хранит повторы игр. (не забудьте завершающую косую "
+"черту /!) По умолчанию `'что означает директорию, где wesnothd был запущен."
 "Директория, где сервер хранит повторы игр. (не забудьте завершающую косую "
 "черту /!) По умолчанию `'что означает директорию, где wesnothd был запущен."
 
@@ -1524,6 +1536,10 @@ msgstr ""
 "(секунды), m (минуты), h (часы), D (дни), M (месяцы) or Y (годы) и %d это "
 "число. Если формат не указан, предполагается что время указано в минутах "
 "(m). Пример: B<time=\"1D12h30m\"> приводит к бану на 1 день, 12 часов и 30 "
+"минут.Определение длительности времени. Формат: %d[%s[%d%s[...]]] где %s "
+"(секунды), m (минуты), h (часы), D (дни), M (месяцы) or Y (годы) и %d это "
+"число. Если формат не указан, предполагается что время указано в минутах "
+"(m). Пример: B<time=\"1D12h30m\"> приводит к бану на 1 день, 12 часов и 30 "
 "минут."
 
 # type: Plain text
@@ -1588,7 +1604,8 @@ msgid ""
 "(for user_handler=forum) The name of the user under which to log into the "
 "database"
 msgstr ""
-"(for user_handler=forum) Имя пользователя с которым войти в базу данных"
+"(for user_handler=forum) Имя пользователя с которым войти в базу данных(for "
+"user_handler=forum) Имя пользователя с которым войти в базу данных"
 
 # type: TP
 #. type: TP
@@ -1620,7 +1637,9 @@ msgid ""
 msgstr ""
 "(for user_handler=forum) Название таблицы где ваш phpbb форум хранит данные "
 "о пользователях. Скорее всего это E<lt>префикс-таблицыE<gt>_users (т.е. "
-"phpbb3_users)."
+"phpbb3_users).(for user_handler=forum) Название таблицы где ваш phpbb форум "
+"хранит данные о пользователях. Скорее всего это E<lt>префикс-"
+"таблицыE<gt>_users (т.е. phpbb3_users)."
 
 # type: TP
 #. type: TP
@@ -1643,7 +1662,12 @@ msgstr ""
 "собственную информацию о пользователях. Вы должны создать эту таблицу "
 "вручную, напримет: B<CREATE TABLE E<lt>имя-таблицыE<gt>(username VARCHAR"
 "(255) PRIMARY KEY, user_lastvisit INT UNSIGNED NOT NULL DEFAULT 0, "
-"user_is_moderator TINYINT(4) NOT NULL DEFAULT 0);>"
+"user_is_moderator TINYINT(4) NOT NULL DEFAULT 0);>(for user_handler=forum) "
+"Имя таблицы в которой wesnothd будет сохранять собственную информацию о "
+"пользователях. Вы должны создать эту таблицу вручную, напримет: B<CREATE "
+"TABLE E<lt>имя-таблицыE<gt>(username VARCHAR(255) PRIMARY KEY, "
+"user_lastvisit INT UNSIGNED NOT NULL DEFAULT 0, user_is_moderator TINYINT(4) "
+"NOT NULL DEFAULT 0);>"
 
 # type: TP
 #. type: TP
@@ -1660,7 +1684,8 @@ msgid ""
 "days)."
 msgstr ""
 "(for user_handler=sample) Время, после которого зарегистрированный ник "
-"истекает (в днях)."
+"истекает (в днях).(for user_handler=sample) Время, после которого "
+"зарегистрированный ник истекает (в днях)."
 
 # type: Plain text
 #. type: Plain text
