--- a/po/wesnoth-utbs/ru.po
+++ b/po/wesnoth-utbs/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-07-07 11:36+0200\n"
+"PO-Revision-Date: 2011-10-12 17:25+0200\n"
 "Last-Translator: Victor Sergienko <singalen@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ru\n"
@@ -4344,24 +4344,18 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1719
-#, fuzzy
-#| msgid "Defeat Troll Leaders"
 msgid "Defeat troll leaders"
 msgstr "Победите вожаков троллей"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1735
-#, fuzzy
-#| msgid "Death of Zhul"
 msgid "Death of Fundin"
-msgstr "Гибель Жул"
+msgstr "Гибель Фундина"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1739
-#, fuzzy
-#| msgid "Death of Nog"
 msgid "Death of Nori"
-msgstr "Гибель Нога"
+msgstr "Гибель Нори"
 
 #. [option]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1752
@@ -4379,24 +4373,18 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1784
-#, fuzzy
-#| msgid "Defeat Dwarf Leaders"
 msgid "Defeat dwarf leaders"
 msgstr "Победите гномьих вожаков"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1800
-#, fuzzy
-#| msgid "Death of Zhul"
 msgid "Death of Thungar"
-msgstr "Гибель Жул"
+msgstr "Гибель Тунгара"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1804
-#, fuzzy
-#| msgid "Death of Jarl"
 msgid "Death of Gnarl"
-msgstr "Гибель Ярла"
+msgstr "Гибель Гнарла"
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1826
